snapshots/syntax/library/functions/string/chr/chr_extended_ascii.snap
---
source: src/syntax/library/functions/string/chr.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: boxChar
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: Chr
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: NumericLiteralExpression
                      children:
                        - kind: IntegerLiteral
                          text: "196"
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
